Fix margin-left on card component for better alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ h1 {
   max-height: 360px;
   padding: 10px 10px 30px;
   margin-top: 50px;
+  margin-left: 50px;
   position: relative;
   font-family: "Edu Tas Beginner";
 }
